--- a/views/new_message.ejs
+++ b/views/new_message.ejs
@@ -1,12 +1,24 @@
 <h2>Create New Message</h2>
 
+<% if (errors.length > 0) { %>
+  <ul class="errors">
+    <% errors.forEach(function(error) { %>
+      <li><%= error.msg %></li>
+    <% }); %>
+  </ul>
+<% } %>
+
 <form action="/messages/new" method="POST">
-  <label for="title">Title:</label><br>
-  <input type="text" id="title" name="title" placeholder="Message Title" required><br><br>
-  
-  <label for="text">Message:</label><br>
-  <textarea id="text" name="text" rows="6" cols="50" placeholder="Write your message here..." required></textarea><br><br>
-  
+  <div>
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" value="<%= formData.title || '' %>" required>
+  </div>
+
+  <div>
+    <label for="text">Message:</label>
+    <textarea id="text" name="text" rows="5" required><%= formData.text || '' %></textarea>
+  </div>
+
   <button type="submit">Post Message</button>
   <a href="/">Cancel</a>
 </form>
