modified:   views/admin.ejs 	modified:   views/error.ejs 	modified:   views/index.ejs 	modified:   views/join_club.ejs 	modified:   views/layout.ejs 	modified:   views/login.ejs 	modified:   views/new_message.ejs 	modified:   views/signup.ejs
Refactored the views to make them simpler.

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,13 +1,5 @@
-<h2>Become an Admin</h2>
-
-<p>Enter the admin passcode to gain moderation privileges.</p>
-
+<h2>Admin Access</h2>
 <form action="/member/admin" method="POST">
-  <div>
-    <label for="passcode">Admin Passcode:</label>
-    <input type="password" id="passcode" name="passcode" required>
-  </div>
-
-  <button type="submit">Become Admin</button>
-  <a href="/">Cancel</a>
+  <input type="password" name="passcode" placeholder="Enter admin passcode" required>
+  <button type="submit">Upgrade</button>
 </form>
