--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,6 @@
-<h2>Log In</h2>
-
+<h2>Login</h2>
 <form action="/login" method="POST">
-  <div>
-    <label for="username">Email:</label>
-    <input type="email" id="username" name="username" required>
-  </div>
-
-  <div>
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-  </div>
-
-  <button type="submit">Log In</button>
+  <input type="email" name="username" placeholder="Email" required><br>
+  <input type="password" name="password" placeholder="Password" required><br>
+  <button type="submit">Login</button>
 </form>
-
-<p>Don't have an account? <a href="/signup">Sign up</a></p>
