--- a/views/new_message.ejs
+++ b/views/new_message.ejs
@@ -1,38 +1,14 @@
 <h2>Create New Message</h2>
 
-<% if (typeof errors !== 'undefined' && errors.length > 0) { %>
-  <div class="flash error">
-    <ul>
-      <% errors.forEach(error => { %>
-        <li><%= error.msg %></li>
-      <% }) %>
-    </ul>
-  </div>
-<% } %>
-
 <form action="/messages/new" method="POST">
-  <label for="title">Title:</label><br>
-  <input 
-    type="text" 
-    id="title" 
-    name="title" 
-    placeholder="Message Title" 
-    value="<%= typeof formData !== 'undefined' ? formData.title : '' %>"
-    maxlength="150"
-    required
-  ><br><br>
-  
-  <label for="text">Message:</label><br>
-  <textarea 
-    id="text" 
-    name="text" 
-    rows="6" 
-    cols="50" 
-    placeholder="Write your message here..." 
-    maxlength="5000"
-    required
-  ><%= typeof formData !== 'undefined' ? formData.text : '' %></textarea><br><br>
-  
+  <input type="text" name="title" placeholder="Title" value="<%= formData.title || '' %>" required><br>
+  <textarea name="text" placeholder="Your message" required><%= formData.text || '' %></textarea><br>
   <button type="submit">Post Message</button>
-  <a href="/">Cancel</a>
+  <a href="/messages">Cancel</a>
 </form>
+
+<% if (errors.length > 0) { %>
+  <ul>
+    <% errors.forEach(e => { %><li><%= e.msg %></li><% }) %>
+  </ul>
+<% } %>
